--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,3 +1,6 @@
 {
-  "showInlineTitle": false
+  "showInlineTitle": false,
+  "newFileLocation": "root",
+  "newFileFolderPath": "",
+  "attachmentFolderPath": "./Attachments"
 }
